ocaml/testsuite/tests/jane-modular-syntax/user_error6.compilers.reference
File "user_error6.ml", line 21, characters 24-26:
21 | let _bad_introduction = () [@jane.something.nested];;
                             ^^
Error: The extension "something" was referenced improperly; it started with
       a [@jane.something.nested] attribute, not a [@jane.something] one
